Fix nav focus style shifting layout, location of buttons on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -86,7 +86,7 @@ nav a:visited {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-evenly;
-  align-items: end;
+  align-items: flex-end;
   height: 100%;
 }
 
@@ -128,11 +128,15 @@ section {
 }
 
 #content a:focus {
-  border: 2px solid var(--rgbLinks);
+  border-color: var(--rgbLinks);
+}
+
+nav ul li a {
+  border: 2px solid transparent;
 }
 
 nav ul li a:focus {
-  border: 2px solid var(--rgbBg);
+  border-color: var(--rgbBg);
 }
 
 ul {
